force-app/main/default/objects/Opportunity/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>CASE(Account.RecordType.DeveloperName, &quot;PersonAccount&quot;,  Account.LastName  &amp; &quot; &quot; &amp; Account.FirstName, Account.Name)</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>