force-app/main/default/objects/Opportunity/fields/AmountAvailable__c.field-meta.xml
<CustomField>
    <fullName>AmountAvailable__c</fullName>
    <formula>Amount -  AmounWithheld__c</formula>
    <label>Amount Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>