force-app/main/default/objects/Opportunity/fields/AmounWithheld__c.field-meta.xml
<CustomField>
    <fullName>AmounWithheld__c</fullName>
    <label>Amount withheld</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>