force-app/main/default/objects/Opportunity/fields/BudgetAllocationStatus__c.field-meta.xml
<CustomField>
    <fullName>BudgetAllocationStatus__c</fullName>
    <defaultValue>&quot;Available&quot;</defaultValue>
    <label>Budget Allocation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Allocated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>