force-app/main/default/objects/Opportunity/listViews/AllOpportunities.listView-meta.xml
<ListView>
    <fullName>AllOpportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>BudgetAllocationStatus__c</columns>
    <columns>Budget__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Donations</label>
</ListView>