force-app/main/default/objects/Opportunity/listViews/Donations.listView-meta.xml
<ListView>
    <fullName>Donations</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>BudgetAllocationStatus__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>AmountAvailable__c</columns>
    <columns>AmounWithheld__c</columns>
    <filterScope>Everything</filterScope>
    <label>Donations</label>
</ListView>